# rust-ui

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
.github/workflows/: azure-static-web-apps-brave-tree-0f72d0610.yml  azure-static-web-apps-proud-tree-018812910.yml
src/: constants.rs  lib.rs  main.rs
src/components/: app.rs  contact.rs  home.rs  links.rs  menu.rs  mod.rs  nav_button.rs  not_found.rs  virtual_man_cave.rs
src/enums/: routes.rs
src/services/: http_service.rs
