[package]
name = "ui"
version = "1.0.0"
edition = "2021"
description = "Test ui for exploring Yew in Rust"
readme = "README.md"
repository = "https://github.com/ArcaneAj/rust-ui"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"